welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
  for (pas <-0 to 5){
           ^