welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

var a: Boolean=false  

def vuBiscuit(){
	if (!estSurBiscuit){
  	a=false
	}else{
  	a=true
}
}


def haveBaggle():Boolean = {
  for (pas <-0 to 5){
  	if (vuBiscuit()==false){
  		avance()
  
 		}else{
    
   		return true
  }
  }
  
}

